--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN0JjoYalGePtIWAqaEQUxk",
+      "authorship_tag": "ABX9TyOwseqKsQYvMGwVqWevjUiG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,7 +96,7 @@
         },
         "outputId": "6131fb8c-1400-4bdf-d172-409f0ca36dc3"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -115,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "SKYl1-Xj3UNh",
         "colab": {
@@ -208,7 +208,7 @@
       "metadata": {
         "id": "S_WwLuIkgsNH"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -229,7 +229,7 @@
         "id": "6wopWbj5ow6n",
         "outputId": "ada3415d-b322-491c-bbcd-6f38791350e9"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,7 +252,7 @@
         "id": "iBfEyeGRpAlg",
         "outputId": "4e50ee6c-4814-451c-9f6f-8ea6d875726f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -287,7 +287,7 @@
         "id": "rZq54tf_JYFL",
         "outputId": "fd814525-8bee-4a0f-a6b5-3b5fb661cba0"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -343,7 +343,7 @@
         "id": "NdRdlml1Jlhc",
         "outputId": "0fcef90a-de60-404e-cbce-64ab3e4bc3fd"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -392,7 +392,7 @@
       "metadata": {
         "id": "VFEBP_PpY5sF"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -434,7 +434,7 @@
       "metadata": {
         "id": "4qLFQoQFvtnu"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -450,7 +450,7 @@
         "id": "zzcbKM9LW9R3",
         "outputId": "85c92242-477a-49da-a549-4af431a62f01"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -516,7 +516,7 @@
         "id": "PTgOibBFXXHu",
         "outputId": "f1f208bb-8776-4597-9b08-d2f258c9f57b"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -539,7 +539,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -558,7 +558,7 @@
       "metadata": {
         "id": "Tc1mCz-V6-Vo"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -581,7 +581,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -918,7 +918,7 @@
       "metadata": {
         "id": "qdaOA09GXGBC"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -933,7 +933,7 @@
         "id": "7-tHqVTchTEm",
         "outputId": "1e8700c8-1d3e-4871-bd9f-a4fa846f8756"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -978,7 +978,7 @@
         "id": "FOYniYGnn8gy",
         "outputId": "0dd050b8-5d9e-4d24-a731-bf9c55bd86dd"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1007,7 +1007,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1037,7 +1037,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1368,7 +1368,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1398,7 +1398,7 @@
       "metadata": {
         "id": "J9wmBDYlH0kO"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1432,7 +1432,7 @@
         "id": "PwWeS1dySgQn",
         "outputId": "66d958a3-8279-49a8-b7c8-d8e9d7dfc338"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1477,7 +1477,7 @@
         "id": "EtTx1HJHNZpY",
         "outputId": "c1b863bd-1308-4268-be76-1bd48c6b638f"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1508,12 +1508,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "train_dir = images_path / 'train'\n",
+        "test_dir = images_path / 'test'\n",
+        "\n",
+        "train_dir, test_dir"
+      ],
       "metadata": {
-        "id": "Tf7G4vyCNfkc"
+        "id": "Tf7G4vyCNfkc",
+        "outputId": "b6fea03a-69f3-4b41-ef78-27bd0140c1ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(PosixPath('data/pizza_steak_sushi/train'),\n",
+              " PosixPath('data/pizza_steak_sushi/test'))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
     }
   ]
 }
