--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPOs8lhq3/h8AtnJM0pedGN",
+      "authorship_tag": "ABX9TyMXZFo3gHxAn01WvAwhPEnu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,7 +96,7 @@
         },
         "outputId": "eb8817b4-09ac-4183-b95e-e6cf43c2fdfc"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -115,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "SKYl1-Xj3UNh",
         "colab": {
@@ -208,7 +208,7 @@
       "metadata": {
         "id": "S_WwLuIkgsNH"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -225,7 +225,7 @@
       "metadata": {
         "id": "6wopWbj5ow6n"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -236,7 +236,7 @@
       "metadata": {
         "id": "iBfEyeGRpAlg"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -249,7 +249,7 @@
       "metadata": {
         "id": "rZq54tf_JYFL"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -263,7 +263,7 @@
       "metadata": {
         "id": "NdRdlml1Jlhc"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -292,7 +292,7 @@
       "metadata": {
         "id": "VFEBP_PpY5sF"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -334,7 +334,7 @@
       "metadata": {
         "id": "4qLFQoQFvtnu"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -346,7 +346,7 @@
       "metadata": {
         "id": "zzcbKM9LW9R3"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -373,7 +373,7 @@
       "metadata": {
         "id": "PTgOibBFXXHu"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -384,7 +384,7 @@
       "metadata": {
         "id": "qy7pngqLGQz3"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -395,7 +395,7 @@
       "metadata": {
         "id": "Tc1mCz-V6-Vo"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -414,7 +414,7 @@
       "metadata": {
         "id": "attYzGFxFhKI"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -444,7 +444,7 @@
       "metadata": {
         "id": "qdaOA09GXGBC"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -455,7 +455,7 @@
       "metadata": {
         "id": "7-tHqVTchTEm"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -479,7 +479,7 @@
       "metadata": {
         "id": "FOYniYGnn8gy"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -490,7 +490,7 @@
       "metadata": {
         "id": "pBzrWMNvvzXY"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -502,7 +502,7 @@
       "metadata": {
         "id": "3iAr5tLov6S5"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -513,7 +513,7 @@
       "metadata": {
         "id": "KHbYHmsKweQv"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -535,7 +535,7 @@
       "metadata": {
         "id": "J9wmBDYlH0kO"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -569,7 +569,7 @@
         "id": "PwWeS1dySgQn",
         "outputId": "456c6b2a-1a1e-4685-e156-f14abcad5257"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -605,7 +605,7 @@
         "id": "EtTx1HJHNZpY",
         "outputId": "39c387d1-72ea-487c-ce9e-7a36142b931d"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -649,7 +649,7 @@
         },
         "outputId": "9ce34403-edc8-42a1-ea89-fc205a15c178"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -684,7 +684,7 @@
       "metadata": {
         "id": "7-7Xei1Wn9Hr"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -713,7 +713,7 @@
         "id": "InT54EGz35_i",
         "outputId": "118e21a4-492b-4c15-c80e-ac6b490105a2"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -757,7 +757,7 @@
       "metadata": {
         "id": "BkjF2X8ONKXY"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -779,7 +779,7 @@
         "id": "6QcUx9UxVaSl",
         "outputId": "844105f3-a3dd-4f6c-cdc0-c677fb659735"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -795,9 +795,21 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "## Data Transformation"
+      ],
       "metadata": {
         "id": "4AOGYuCZWwpp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Turn your data into Tensors (numerical representation) to be able to load it into PyTorch.\n",
+        "-"
+      ],
+      "metadata": {
+        "id": "MPqooARTqkpK"
       }
     },
     {
