--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPof3QoeLfVXvrbQzxCH6hz",
+      "authorship_tag": "ABX9TyNdzOMyWgkSXucR4/ginWN5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -828,14 +828,39 @@
     {
       "cell_type": "code",
       "source": [
-        "transformer = tv.transforms.Compose([\n",
+        "image_transformer = tv.transforms.Compose([\n",
+        "    # Resize the image\n",
+        "    tv.transforms.Resize(size = (64,64)),\n",
         "\n",
+        "    # Flip the image randomly (with parameter = p) on the horizontal\n",
+        "    tv.transforms.RandomHorizontalFlip(p = 0.5),\n",
+        "\n",
+        "    # Turn the image into tensor\n",
+        "    tv.transforms.ToTensor()\n",
         "])"
       ],
       "metadata": {
         "id": "lhJdI6I52aO6"
       },
       "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Note: **ToTensor()** converts all pixel values from 0 to 255 to be between 0.0 and 1.0."
+      ],
+      "metadata": {
+        "id": "qETeAMcKmmFH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "fTBflYpWm25a"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
