--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNyfGhn+fq1rTklQbQP+iRe",
+      "authorship_tag": "ABX9TyOv7em1syXmrf1nwUyZh5hU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -830,10 +830,19 @@
       "source": [
         "def plot_images(images_paths,\n",
         "                transform = False,\n",
+        "                transformer = None,\n",
         "                n = 3,\n",
         "                seed = 42):\n",
         "\n",
         "    \"\"\"Plot a series of random images from images_paths.\n",
+        "    - Opens n images from images_paths.\n",
+        "    - [Transforms the images (if specified)].\n",
+        "    - Plot the images side by side\n",
+        "\n",
+        "    Args:\n",
+        "        images_paths (list): List of target image paths.\n",
+        "        transform (bool): Specify whether to plot transformed images or the originals.\n",
+        "\n",
         ""
       ],
       "metadata": {
