--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOv7em1syXmrf1nwUyZh5hU",
+      "authorship_tag": "ABX9TyMR7NaIvoe8hiMjLYjdVvsc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -842,6 +842,11 @@
         "    Args:\n",
         "        images_paths (list): List of target image paths.\n",
         "        transform (bool): Specify whether to plot transformed images or the originals.\n",
+        "        transformer (PyTorch Tranforms): Transforms to be applied to images.\n",
+        "        n (int): Number of images to plot.\n",
+        "        seed (int): Random seed for the random generator.\n",
+        "    \"\"\"\n",
+        "\n",
         "\n",
         ""
       ],
