--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMR7NaIvoe8hiMjLYjdVvsc",
+      "authorship_tag": "ABX9TyPkOQuJ06Alb3onyc3Sq+Fr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -847,7 +847,13 @@
         "        seed (int): Random seed for the random generator.\n",
         "    \"\"\"\n",
         "\n",
+        "    random.seed(seed)\n",
         "\n",
+        "    random_sample = random.sample(images_paths, k=n)\n",
+        "\n",
+        "    for image_path in random_sample:\n",
+        "        with PIL.Image.Open(image_path) as img:\n",
+        "            fig, ax = plt.subplots(1, 2)\n",
         ""
       ],
       "metadata": {
