--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPkOQuJ06Alb3onyc3Sq+Fr",
+      "authorship_tag": "ABX9TyOYsKmCCpVn6EJUxul4LfT8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -854,6 +854,13 @@
         "    for image_path in random_sample:\n",
         "        with PIL.Image.Open(image_path) as img:\n",
         "            fig, ax = plt.subplots(1, 2)\n",
+        "            ax[0].imshow(img)\n",
+        "            ax[0].set_title(f\"Original\\nSize: {img.size}\")\n",
+        "            ax[0].axis(\"off\")\n",
+        "\n",
+        "            if transform:\n",
+        "                transformed_img = transformer.permute(1, 2, 0)\n",
+        "                # permute() changes the shape of the image to suit matplotlib as the PyTorch default is [C, H, W] and matplotlib is [H, W, C]\n",
         ""
       ],
       "metadata": {
