--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOYsKmCCpVn6EJUxul4LfT8",
+      "authorship_tag": "ABX9TyNookGZMFWhKrb3Gtl9oKHG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -853,15 +853,26 @@
         "\n",
         "    for image_path in random_sample:\n",
         "        with PIL.Image.Open(image_path) as img:\n",
-        "            fig, ax = plt.subplots(1, 2)\n",
-        "            ax[0].imshow(img)\n",
-        "            ax[0].set_title(f\"Original\\nSize: {img.size}\")\n",
-        "            ax[0].axis(\"off\")\n",
         "\n",
         "            if transform:\n",
+        "                fig, ax = plt.subplots(1, 2)\n",
+        "                ax[0].imshow(img)\n",
+        "                ax[0].set_title(f\"Original\\nSize: {img.size}\")\n",
+        "                ax[0].axis(\"off\")\n",
+        "\n",
         "                transformed_img = transformer.permute(1, 2, 0)\n",
         "                # permute() changes the shape of the image to suit matplotlib as the PyTorch default is [C, H, W] and matplotlib is [H, W, C]\n",
-        ""
+        "                ax[1].imshow(transformed_img)\n",
+        "                ax[1].set_title(f\"Transformed\\nSize: {transformed_img.size}\")\n",
+        "                ax[1].axis(\"off\")\n",
+        "\n",
+        "            else:\n",
+        "                fig, ax = plt.subplots(1, 1)\n",
+        "                ax[0].imshow(img)\n",
+        "                ax[0].set_title(f\"Image\\nSize: {img.size}\")\n",
+        "                ax[0].axis(\"off\")\n",
+        "\n",
+        "            fig.suptitle(f\"Class {image_path.parent.stem}\", fontsize=12)"
       ],
       "metadata": {
         "id": "nh2om5tx_Fgt"
