--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO+MA9HjeIJKvlrGOE5H8bG",
+      "authorship_tag": "ABX9TyN0iftMGDMFap7ZWqWVi0GV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -917,12 +917,12 @@
         "plot_images(images_paths = images_paths)"
       ],
       "metadata": {
-        "id": "9QBHe5YbXfCA",
-        "outputId": "0a726410-dcb3-4ca2-d45f-d687e5dda679",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "9QBHe5YbXfCA",
+        "outputId": "0a726410-dcb3-4ca2-d45f-d687e5dda679"
       },
       "execution_count": 52,
       "outputs": [
@@ -967,11 +967,11 @@
       ],
       "metadata": {
         "id": "fTBflYpWm25a",
-        "outputId": "c6f225cc-df3e-4ff4-cef8-9242aaa06d66",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "c6f225cc-df3e-4ff4-cef8-9242aaa06d66"
       },
       "execution_count": 51,
       "outputs": [
@@ -1006,6 +1006,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Large shape of an image indicates more information that the model can learn.\n",
+        "- We trade off between the accuracy gained from large image shape and the computational costs of such large shapes.\n",
+        "-"
+      ],
+      "metadata": {
+        "id": "jQwHkzJufwup"
+      }
     },
     {
       "cell_type": "code",
