--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNBOlVVSz3m5XQsnIKWpKzC",
+      "authorship_tag": "ABX9TyMlc4xPCtbmA7dR5VABvXnR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1039,11 +1039,85 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "train_data = tv.datasets.ImageFolder(root = train_dir,\n",
+        "                                     transform = image_transformer,\n",
+        "                                     target_transform = None)\n",
+        "\n",
+        "test_data = tv.datasets.ImageFolder(root = test_dir,\n",
+        "                                    transform = image_transformer)\n",
+        "\n",
+        "print(f\"Train data:\\n{train_data}\\nTest data:\\n{test_data}\")"
+      ],
+      "metadata": {
+        "id": "ZGaNB8gNXeBQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3463ef4b-ac31-41a3-f3fa-969acd5f3cdd"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Train data:\n",
+            "Dataset ImageFolder\n",
+            "    Number of datapoints: 225\n",
+            "    Root location: data/pizza_steak_sushi/train\n",
+            "    StandardTransform\n",
+            "Transform: Compose(\n",
+            "               Resize(size=(64, 64), interpolation=bilinear, max_size=None, antialias=True)\n",
+            "               RandomHorizontalFlip(p=0.5)\n",
+            "               ToTensor()\n",
+            "           )\n",
+            "Test data:\n",
+            "Dataset ImageFolder\n",
+            "    Number of datapoints: 75\n",
+            "    Root location: data/pizza_steak_sushi/test\n",
+            "    StandardTransform\n",
+            "Transform: Compose(\n",
+            "               Resize(size=(64, 64), interpolation=bilinear, max_size=None, antialias=True)\n",
+            "               RandomHorizontalFlip(p=0.5)\n",
+            "               ToTensor()\n",
+            "           )\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class_names = train_data.classes\n",
+        "\n",
+        "print(class_names, train_data.class_to_idx)"
+      ],
+      "metadata": {
+        "id": "q9k3Ayqq8FgP",
+        "outputId": "d4758e34-8c9c-4b40-efed-a779ed8ab4e0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['pizza', 'steak', 'sushi'] {'pizza': 0, 'steak': 1, 'sushi': 2}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "ZGaNB8gNXeBQ"
+        "id": "ifM5qd_39ONt"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
