--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMlc4xPCtbmA7dR5VABvXnR",
+      "authorship_tag": "ABX9TyNOHkcA9rjUHPlsXM9sZt8C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1089,16 +1089,16 @@
     {
       "cell_type": "code",
       "source": [
-        "class_names = train_data.classes\n",
+        "class_names, class_dict = train_data.classes, train_data.class_to_idx\n",
         "\n",
-        "print(class_names, train_data.class_to_idx)"
+        "print(class_names, class_dict)"
       ],
       "metadata": {
-        "id": "q9k3Ayqq8FgP",
-        "outputId": "d4758e34-8c9c-4b40-efed-a779ed8ab4e0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "q9k3Ayqq8FgP",
+        "outputId": "d4758e34-8c9c-4b40-efed-a779ed8ab4e0"
       },
       "execution_count": 36,
       "outputs": [
@@ -1113,9 +1113,65 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "img, label = train_data[2][0], train_data[2][1]\n",
+        "\n",
+        "print(f\"Image tensor:\\n{img}\")\n",
+        "print(f\"Image shape: {img.shape}\")\n",
+        "print(f\"Image tensor: {img.dtype}\")\n",
+        "print(f\"Image label: {label}\")\n",
+        "print(f\"Label datatype: {type(label)}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ifM5qd_39ONt",
+        "outputId": "6af574b7-fc0c-408f-cf7c-075fc0b8438b"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Image tensor:\n",
+            "tensor([[[0.2314, 0.2314, 0.2275,  ..., 0.0431, 0.0392, 0.0392],\n",
+            "         [0.2196, 0.2235, 0.2196,  ..., 0.0392, 0.0392, 0.0392],\n",
+            "         [0.2118, 0.2118, 0.2078,  ..., 0.0392, 0.0392, 0.0392],\n",
+            "         ...,\n",
+            "         [0.4039, 0.4863, 0.5373,  ..., 0.7961, 0.8078, 0.8118],\n",
+            "         [0.1608, 0.2000, 0.2902,  ..., 0.6392, 0.6157, 0.5176],\n",
+            "         [0.0784, 0.0902, 0.1216,  ..., 0.3686, 0.3333, 0.2863]],\n",
+            "\n",
+            "        [[0.1922, 0.1922, 0.1922,  ..., 0.0392, 0.0353, 0.0353],\n",
+            "         [0.1843, 0.1843, 0.1804,  ..., 0.0353, 0.0353, 0.0353],\n",
+            "         [0.1765, 0.1725, 0.1765,  ..., 0.0353, 0.0353, 0.0353],\n",
+            "         ...,\n",
+            "         [0.3176, 0.4000, 0.4588,  ..., 0.5294, 0.5373, 0.5804],\n",
+            "         [0.1098, 0.1373, 0.2196,  ..., 0.3882, 0.3765, 0.2941],\n",
+            "         [0.0588, 0.0706, 0.0863,  ..., 0.1686, 0.1608, 0.1529]],\n",
+            "\n",
+            "        [[0.2078, 0.2000, 0.1961,  ..., 0.0196, 0.0157, 0.0157],\n",
+            "         [0.1882, 0.1843, 0.1843,  ..., 0.0157, 0.0157, 0.0157],\n",
+            "         [0.1725, 0.1686, 0.1686,  ..., 0.0196, 0.0157, 0.0157],\n",
+            "         ...,\n",
+            "         [0.1176, 0.1451, 0.1804,  ..., 0.1137, 0.0745, 0.1098],\n",
+            "         [0.0275, 0.0275, 0.0667,  ..., 0.0275, 0.0314, 0.0275],\n",
+            "         [0.0235, 0.0235, 0.0275,  ..., 0.0118, 0.0118, 0.0196]]])\n",
+            "Image shape: torch.Size([3, 64, 64])\n",
+            "Image tensor: torch.float32\n",
+            "Image label: 0\n",
+            "Label datatype: <class 'int'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "ifM5qd_39ONt"
+        "id": "Daa4TSfAQAw4"
       },
       "execution_count": null,
       "outputs": []
