--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPJ8hT+kJ3f7D87MDUW8S0Z",
+      "authorship_tag": "ABX9TyON4zkj6ff/QH+mT/buBwCn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1223,8 +1223,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Turn loaded images into DataLoader\n",
-        "\n"
+        "# Turn loaded images into DataLoader to iterate over them\n",
+        "\n",
+        " # Number of subprocesses to be created to load the data"
       ],
       "metadata": {
         "id": "UFQ97kT-v4wW"
@@ -1235,10 +1236,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "- Turning the datasets into a DataLoader makes them iterable."
+        "- The higher num_workers, the more computer power PyTorch will use."
       ],
       "metadata": {
-        "id": "A0oy89F0wy6q"
+        "id": "R_eWr03vD2D2"
       }
     },
     {
