--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMl2MKrk7yTRVNSuRu26qVz",
+      "authorship_tag": "ABX9TyPKvLL500qg+VbSJga1MBrw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,7 +95,7 @@
         },
         "outputId": "d7781907-642f-4bb8-f2a9-35ce10109fcc"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -115,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "SKYl1-Xj3UNh",
         "colab": {
@@ -208,7 +207,7 @@
       "metadata": {
         "id": "S_WwLuIkgsNH"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -225,7 +224,7 @@
       "metadata": {
         "id": "6wopWbj5ow6n"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -236,7 +235,7 @@
       "metadata": {
         "id": "iBfEyeGRpAlg"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -249,7 +248,7 @@
       "metadata": {
         "id": "rZq54tf_JYFL"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -263,7 +262,7 @@
       "metadata": {
         "id": "NdRdlml1Jlhc"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -292,7 +291,7 @@
       "metadata": {
         "id": "VFEBP_PpY5sF"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -334,7 +333,7 @@
       "metadata": {
         "id": "4qLFQoQFvtnu"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -346,7 +345,7 @@
       "metadata": {
         "id": "zzcbKM9LW9R3"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -373,7 +372,7 @@
       "metadata": {
         "id": "PTgOibBFXXHu"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -384,7 +383,7 @@
       "metadata": {
         "id": "qy7pngqLGQz3"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -395,7 +394,7 @@
       "metadata": {
         "id": "Tc1mCz-V6-Vo"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -414,7 +413,7 @@
       "metadata": {
         "id": "attYzGFxFhKI"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -444,7 +443,7 @@
       "metadata": {
         "id": "qdaOA09GXGBC"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -455,7 +454,7 @@
       "metadata": {
         "id": "7-tHqVTchTEm"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -479,7 +478,7 @@
       "metadata": {
         "id": "FOYniYGnn8gy"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -490,7 +489,7 @@
       "metadata": {
         "id": "pBzrWMNvvzXY"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -502,7 +501,7 @@
       "metadata": {
         "id": "3iAr5tLov6S5"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -513,7 +512,7 @@
       "metadata": {
         "id": "KHbYHmsKweQv"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -535,7 +534,7 @@
       "metadata": {
         "id": "J9wmBDYlH0kO"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -569,7 +568,7 @@
         "id": "PwWeS1dySgQn",
         "outputId": "ef3788ca-8ae2-4a9c-cff5-1623fe8a07bd"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -605,7 +604,7 @@
         "id": "EtTx1HJHNZpY",
         "outputId": "e1726b61-9b8e-4a74-aaa3-99aa526a5a28"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -649,7 +648,7 @@
         },
         "outputId": "1f230a03-9182-4319-d92c-900c87b40282"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -684,7 +683,7 @@
       "metadata": {
         "id": "7-7Xei1Wn9Hr"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -713,7 +712,7 @@
         "id": "InT54EGz35_i",
         "outputId": "63b129e1-4feb-4859-ebb7-5c9a1706159c"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -757,7 +756,7 @@
       "metadata": {
         "id": "BkjF2X8ONKXY"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -779,7 +778,7 @@
         "id": "6QcUx9UxVaSl",
         "outputId": "23f3fac5-dfd0-4ecd-97d3-716ff8be0256"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -822,7 +821,7 @@
       "metadata": {
         "id": "wTZQ1V2kVuJ4"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -877,7 +876,7 @@
       "metadata": {
         "id": "nh2om5tx_Fgt"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -899,7 +898,7 @@
       "metadata": {
         "id": "lhJdI6I52aO6"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -924,7 +923,7 @@
         "id": "9QBHe5YbXfCA",
         "outputId": "2bebf846-f030-4fe8-c455-8a3b3e74fb20"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -973,7 +972,7 @@
         },
         "outputId": "7d191eb4-ae2f-45e1-8506-817cff2314de"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1056,7 +1055,7 @@
         },
         "outputId": "bc99c9c4-3739-4a73-d437-54267ac86ae5"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1100,7 +1099,7 @@
         "id": "q9k3Ayqq8FgP",
         "outputId": "a25e3f81-7187-4c08-c6f9-c35b2c5c5d1e"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1129,7 +1128,7 @@
         "id": "ifM5qd_39ONt",
         "outputId": "fb3a9231-4d3e-4305-8691-2ff3343b9ef2"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1187,7 +1186,7 @@
         "id": "Daa4TSfAQAw4",
         "outputId": "21a7afed-d233-4394-8950-6cc7eee593bb"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1228,7 +1227,7 @@
       "metadata": {
         "id": "Le-bGDecdHO7"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1255,7 +1254,7 @@
         "id": "UFQ97kT-v4wW",
         "outputId": "52b9dba3-0efa-4ca5-8fb8-6e0a5eff6bfb"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1285,7 +1284,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1309,10 +1308,21 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 2. Using custom Dataset"
+        "### 2. Using custom way to load Dataset"
       ],
       "metadata": {
         "id": "DNKiqz9Lhrtm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- In case a pre-built Dataset creater as ImageFolder does not exist.\n",
+        "- Pros:\n",
+        "    -"
+      ],
+      "metadata": {
+        "id": "sOn-vCSuv-JT"
       }
     }
   ]
