--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKvLL500qg+VbSJga1MBrw",
+      "authorship_tag": "ABX9TyOaIth3yY5lx3qawfAKgH1n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1319,7 +1319,12 @@
       "source": [
         "- In case a pre-built Dataset creater as ImageFolder does not exist.\n",
         "- Pros:\n",
-        "    -"
+        "    - Avoid the limitation of PyTorch Dataset pre-built functions.\n",
+        "    - Ease in creating a Dataset of almost anything.\n",
+        "- Cons:\n",
+        "    - Writing more code which could be problematic.\n",
+        "    - Your custom Datset might not work.\n",
+        "- What we will create could be considered as a replication of the ImageFolder.\n"
       ],
       "metadata": {
         "id": "sOn-vCSuv-JT"
