--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNtLcNl9rubm1170s8rsFa5",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPMtJbzTzHKXg+J/L0t45rn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1345,32 +1346,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [
-        "class_names, class_dict"
-      ],
-      "metadata": {
-        "id": "JedUn73ax4jO",
-        "outputId": "31e38e3f-2fe8-4925-dd6f-684a92777d48",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 42,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(['pizza', 'steak', 'sushi'], {'pizza': 0, 'steak': 1, 'sushi': 2})"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 42
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "#### Writing a helper function to get class names"
@@ -1387,32 +1362,6 @@
       "metadata": {
         "id": "nDchdoMzzDlP"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "sorted([entry.name for entry in os.scandir(train_dir)])"
-      ],
-      "metadata": {
-        "id": "uRTDYkRF0OsR",
-        "outputId": "8846b4e4-7fb2-467c-dd96-72a07f4f21b1",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 49,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['pizza', 'steak', 'sushi']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 49
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -1445,17 +1394,41 @@
       "metadata": {
         "id": "CZuxHlwb0dyU"
       },
-      "execution_count": null,
+      "execution_count": 51,
       "outputs": []
     },
     {
       "cell_type": "code",
+      "source": [
+        "get_classes(train_dir)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "swNibg64U_E6",
+        "outputId": "fc543cc8-647a-43eb-ae08-57cc7682580a"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(['pizza', 'steak', 'sushi'], {'pizza': 0, 'steak': 1, 'sushi': 2})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [],
       "metadata": {
-        "id": "swNibg64U_E6"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "Cp9yWBwxVNGM"
+      }
     },
     {
       "cell_type": "markdown",
