--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPMtJbzTzHKXg+J/L0t45rn",
+      "authorship_tag": "ABX9TyOZapqWKZd9O2Nb08hC+2s8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1309,7 +1309,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 2. Using custom way to load Dataset"
+        "### 2. Using custom Dataset"
       ],
       "metadata": {
         "id": "DNKiqz9Lhrtm"
@@ -1324,8 +1324,7 @@
         "    - Ease in creating a Dataset of almost anything.\n",
         "- Cons:\n",
         "    - Writing more code which could be problematic.\n",
-        "    - Your custom Datset might not work.\n",
-        "- What we will create could be considered as a replication of the ImageFolder."
+        "    - Your custom Datset might not work."
       ],
       "metadata": {
         "id": "sOn-vCSuv-JT"
@@ -1336,7 +1335,7 @@
       "source": [
         "import os # for dealing with directories\n",
         "import pathlib # for dealing with filepaths\n",
-        "from torch.utils.data import Dataset\n",
+        "from torch.utils.data import Dataset # Our custom dataset class will inherit from this parent class\n",
         "from typing import List, Tuple, Dict # to add type hints"
       ],
       "metadata": {
@@ -1346,26 +1345,10 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "#### Writing a helper function to get class names"
-      ],
-      "metadata": {
-        "id": "h67hDphdyq25"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "- Create the function just with a directory path given."
-      ],
-      "metadata": {
-        "id": "nDchdoMzzDlP"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
+        "# a helper function to get class names\n",
+        "\n",
         "def get_classes(dir: str) -> Tuple[List[str], Dict[str, int]]:\n",
         "    \"\"\"Gets the class folder names given a target directy.\n",
         "\n",
@@ -1425,10 +1408,21 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "- What we will create could be considered as a replication of the ImageFolder."
+      ],
       "metadata": {
         "id": "Cp9yWBwxVNGM"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "QfHRH8KQcL06"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
