--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOZapqWKZd9O2Nb08hC+2s8",
+      "authorship_tag": "ABX9TyNrh5qhNG9KfWw8AGnnTllE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1417,7 +1417,18 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class ImageFolderCustom(Dataset): # Subclass Dataset\n",
+        "\n",
+        "    def __init__(self, targ_dir:str, transformer=None) -> None:\n",
+        "\n",
+        "        # Initialize class atrributes\n",
+        "\n",
+        "        # Get all image paths\n",
+        "        self.path = list(pathlib.Path(targ_dir).golob(\"*/*.jpg\"))\n",
+        "\n",
+        ""
+      ],
       "metadata": {
         "id": "QfHRH8KQcL06"
       },
