--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO/XWBIpgoX1nVA4Zw1p79i",
+      "authorship_tag": "ABX9TyMkXsfdKuUCMCVpZnHUokNP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1419,14 +1419,14 @@
       "source": [
         "class ImageFolderCustom(Dataset): # Subclass Dataset\n",
         "\n",
-        "    def __init__(self, targ_dir:str, transformer=None) -> None:\n",
+        "    def __init__(self, targ_dir:str, transform=None) -> None:\n",
         "\n",
         "        # Initialize class atrributes\n",
         "\n",
         "        # Get all image paths\n",
         "        self.paths = list(pathlib.Path(targ_dir).golob(\"*/*.jpg\"))\n",
         "\n",
-        "        self.transformer = transformer\n",
+        "        self.transform = transform\n",
         "\n",
         "        self.classes, self.class_to_idx = get_classes(targ_dir)\n",
         "\n",
@@ -1455,7 +1455,16 @@
       "metadata": {
         "id": "QfHRH8KQcL06"
       },
-      "execution_count": 49,
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "aAESxc4rEVWq"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
