--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMkXsfdKuUCMCVpZnHUokNP",
+      "authorship_tag": "ABX9TyOzJ8XMTdAVKzf1JX4Zo5o7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -816,12 +816,13 @@
       "source": [
         "import torch\n",
         "from torch.utils.data import DataLoader\n",
-        "import torchvision as tv # because we are dealing with a vision problem"
+        "import torchvision as tv # because we are dealing with a vision problem\n",
+        "from torchvision import transforms"
       ],
       "metadata": {
         "id": "wTZQ1V2kVuJ4"
       },
-      "execution_count": 30,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -1460,11 +1461,27 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Augment and transform train data\n",
+        "\n",
+        "train_transforms = transforms.Compose([\n",
+        "    transforms.Resize((64,64)),\n",
+        "    transforms.RandomHorizontalFlip(p=0.5),\n",
+        "    transforms.ToTensor()\n",
+        "]\n",
+        ")\n",
+        "\n",
+        "# Transform test data (only reshaping)\n",
+        "train_transforms = transforms.Compose([\n",
+        "    transforms.Resize((64,64)),\n",
+        "    transforms.ToTensor()\n",
+        "]\n",
+        ")"
+      ],
       "metadata": {
         "id": "aAESxc4rEVWq"
       },
-      "execution_count": null,
+      "execution_count": 53,
       "outputs": []
     },
     {
